Kleopatra: Rework versioning
Testing, NormalPublic

Assigned To
Authored By
ikloecker
May 26 2025, 10:18 AM

Description

For the Gpg4win (and related builds) we want

  • Kleopatra shows version of Gpg4win (or GPD, etc.) in About window
  • Kleopatra shows its git revision in Components tab

Open questions:

  • The manifest file currently uses description "GNU Privacy Guard (Kleopatra)", assemblyIdentity.name "GnuPG.kleopatra", and version @kleopatra_version_win@.0.~~
  • The versioninfo.rc file currently uses @kleopatra_fileversion_win@ as FILEVERSION and PRODUCTVERSION.
  • The versioninfo.rc file currently uses @kleopatra_version_win@ as FileVersion value and ProductVersion value.
  • kleopatra_version_win is the built-in 3-digit version number of kleopatra.
  • kleopatra_fileversion_win is a 4-digit comma-separated version number consisting of the built-in major, minor, and micro version and a 0.

Shall these version numbers match the Gpg4win version instead of the built-in kleopatra version? Or shall only the product version match the Gpg4win version?

Update: We leave those version numbers as-is for now.

test on hold: needs gpg4win5 release and gpd5 release

Event Timeline

ikloecker created this task.

Yes. If gpgconf could read that version directly from kleopatra it would be even better. Bit in cases of early crashes this might be sub-optimal; thus I will tell gpgconf to get some additional version info from an installed versioninfo.txt file (which gpg4win creates). Thanks.

ikloecker changed the task status from Open to Testing.Jun 2 2025, 11:12 AM
ikloecker updated the task description. (Show Details)

Looks good to me on gpg4win-5.0.0-beta336 @ win10.

Still needs to be tested after the first release.

Is correct for released versions, too, here GPD 5.0.2: