Optionally, list Kleopatra itself as component in About data

This is used by Gpg4win and similar distributions including Kleopatra.
Instead of a version number we show the commit ID which is read by
cmake from a VERSION file created by the Gpg4win scripts.

GnuPG-bug-id: 7666